syntax  =  "proto3";
option optimize_for  =  SPEED;
// option cc_enable_arenas  =  true;

package zpds.hrpc;

enum MasterCmdTypeE {
	M_NOACTION                                                      =  0;
	M_MANAGE_TAGS                                                   =  1;
	M_MANAGE_HOSTS                                                  =  2;
	M_MANAGE_CATEGORY                                               =  3;

	M_MANAGE_EXTER                                                  =  4;
	M_MANAGE_USER                                                   =  5;
	M_RESETPASS_EXTER                                               =  6;
	M_RESETPASS_USER                                                =  7;

	M_MANAGE_LOCALDATA                                              =  8;
	M_MANAGE_WIKIDATA                                               =  9;

}

// DONOT TOUCH THIS - START

enum RemoteCmdTypeE {
	R_NOACTION                                                      =  0;
	R_REGISTER                                                      =  1;
	R_READONE                                                       =  2;
	R_TRANSLOG                                                      =  3;
	R_SETINFO                                                       =  4;
	R_ADDHOST                                                       =  5;
	R_BUFFTRANS                                                     =  6;
};

message RemoteT {
	string address                                                  =  1;
	uint64 logcounter                                               =  2;
	uint64 updated_at                                               =  3;
}

message StateT {
	string hostname                                                 =  1;
	string master                                                   =  2;
	uint64 logcounter                                               =  4;
	bool is_master                                                  =  5;
	uint64 ts                                                       =  7;
	string thisurl                                                  =  8;
	repeated RemoteT remotes                                        =  9;

	bool not_found                                                  = 21;
}

// DONOT TOUCH THIS - END
